# target-data-extractor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ETHICS.md
src/target_data_extractor/: __init__.py  __main__.py  bypass.py  cli.py  exceptions.py  models.py  output.py  run.py
tests/: conftest.py  test_base.py  test_bypass.py  test_models.py  test_output.py  test_platforms.py
